# langchain-streamlit_work

langchain-streamlit-docker-template-main/: main.py  pyproject.toml  requirements.txt  test_azure.py  vowel.xls  vowel.xlsx
