[tool.poetry]
name = "langchain-streamlit-docker-template"
version = "0.1.0"
description = "A template langchain Streamlit App with Docker"
authors = ["Amjad Raza"]
license = "MIT"
readme = "README.md"
packages = [{include = "langchain_streamlit_docker_template"}]


[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.184"
openai = "^0.27.7"
streamlit = "^1.24.0"
plotly = "^5.16.1"
seaborn = "^0.12.2"
matplotlib = "^3.7.2"
pdfplumber = "^0.10.2"
streamlit-aggrid = "^0.3.4.post3"
factor-analyzer = "^0.5.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
